--- a/datos.html
+++ b/datos.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Datos</title>
+    <title>Datos</title>
 </head>
 <body>
-    <table border="1">
+    <table>
         <thead>
             <tr>
                 <th>Edad</th>
@@ -14,6 +14,56 @@
             </tr>
         </thead>
         <tbody>
+            <tr><td>13</td><td>Femenino</td></tr>
+            <tr><td>42</td><td>Masculino</td></tr>
+            <tr><td>25</td><td>Masculino</td></tr>
+            <tr><td>29</td><td>nan</td></tr>
+            <tr><td>13</td><td>Masculino</td></tr>
+            <tr><td>-8</td><td></td></tr>
+            <tr><td>11</td><td>Masculino</td></tr>
+            <tr><td>42</td><td>FEMENINO</td></tr>
+            <tr><td>-9</td><td>Femenino</td></tr>
+            <tr><td>13</td><td>Masculino</td></tr>
+            <tr><td>33</td><td>Femenino</td></tr>
+            <tr><td>19</td><td>Masculino</td></tr>
+            <tr><td>27</td><td>Masculino</td></tr>
+            <tr><td>-9</td><td>Masculino</td></tr>
+            <tr><td>49</td><td>M</td></tr>
+            <tr><td>diez</td><td>FEMENINO</td></tr>
+            <tr><td>22</td><td>FEMENINO</td></tr>
+            <tr><td>1</td><td>FEMENINO</td></tr>
+            <tr><td>47</td><td>Masculino</td></tr>
+            <tr><td>11</td><td>FEMENINO</td></tr>
+            <tr><td>33</td><td>Masculino</td></tr>
+            <tr><td>14</td><td>Masculino</td></tr>
+            <tr><td>38</td><td>Masculino</td></tr>
+            <tr><td>16</td><td>Femenino</td></tr>
+            <tr><td>48</td><td>Femenino</td></tr>
+            <tr><td>31</td><td>Femenino</td></tr>
+            <tr><td>17</td><td>FEMENINO</td></tr>
+            <tr><td>49</td><td>Femenino</td></tr>
+            <tr><td>5</td><td>Femenino</td></tr>
+            <tr><td>4</td><td>Masculino</td></tr>
+            <tr><td>36</td><td>Masculino</td></tr>
+            <tr><td>40</td><td>FEMENINO</td></tr>
+            <tr><td>33</td><td>Masculino</td></tr>
+            <tr><td>44</td><td>F</td></tr>
+            <tr><td>41</td><td>FEMENINO</td></tr>
+            <tr><td>46</td><td>Masculino</td></tr>
+            <tr><td>-8</td><td>Masculino</td></tr>
+            <tr><td>26</td><td>FEMENINO</td></tr>
+            <tr><td>40</td><td>Masculino</td></tr>
+            <tr><td>-4</td><td>FEMENINO</td></tr>
+            <tr><td>10</td><td>FEMENINO</td></tr>
+            <tr><td>-2</td><td>Masculino</td></tr>
+            <tr><td>28</td><td>Femenino</td></tr>
+            <tr><td>7</td><td>Masculino</td></tr>
+            <tr><td>-7</td><td>FEMENINO</td></tr>
+            <tr><td>14</td><td>Masculino</td></tr>
+            <tr><td>49</td><td>Femenino</td></tr>
+            <tr><td>3</td><td>Masculino</td></tr>
+            <tr><td>39</td><td>Femenino</td></tr>
+            <tr><td>47</td><td>Femenino</td></tr>
             <tr><td>170</td><td>65</td></tr>
             <tr><td>162</td><td>55</td></tr>
             <tr><td>178</td><td>70</td></tr>
@@ -30,51 +80,5 @@
             <tr><td>158</td><td>57</td></tr>
             <tr><td>173</td><td>69</td></tr>
             <tr><td>165</td><td>60</td></tr>
-            <tr><td>177</td><td>71</td></tr>
-            <tr><td>159</td><td>54</td></tr>
-            <tr><td>170</td><td>66</td></tr>
-            <tr><td>181</td><td>74</td></tr>
-            <tr><td>164</td><td>59</td></tr>
-            <tr><td>176</td><td>68</td></tr>
-            <tr><td>169</td><td>62</td></tr>
-            <tr><td>174</td><td>70</td></tr>
-            <tr><td>157</td><td>56</td></tr>
-            <tr><td>179</td><td>71</td></tr>
-            <tr><td>161</td><td>53</td></tr>
-            <tr><td>183</td><td>76</td></tr>
-            <tr><td>171</td><td>64</td></tr>
-            <tr><td>166</td><td>59</td></tr>
-            <tr><td>158</td><td>55</td></tr>
-            <tr><td>172</td><td>66</td></tr>
-            <tr><td>180</td><td>73</td></tr>
-            <tr><td>168</td><td>62</td></tr>
-            <tr><td>175</td><td>68</td></tr>
-            <tr><td>163</td><td>57</td></tr>
-            <tr><td>177</td><td>70</td></tr>
-            <tr><td>160</td><td>54</td></tr>
-            <tr><td>178</td><td>72</td></tr>
-            <tr><td>165</td><td>61</td></tr>
-            <tr><td>169</td><td>63</td></tr>
-            <tr><td>171</td><td>65</td></tr>
-            <tr><td>155</td><td>48</td></tr>
-            <tr><td>167</td><td>60</td></tr>
-            <tr><td>174</td><td>68</td></tr>
-            <tr><td>182</td><td>74</td></tr>
-            <tr><td>159</td><td>52</td></tr>
-            <tr><td>176</td><td>69</td></tr>
-            <tr><td>183</td><td>75</td></tr>
-            <tr><td>161</td><td>56</td></tr>
-            <tr><td>189</td><td>123</td></tr>
-            <tr><td>200</td><td>61</td></tr>
-            <tr><td>210</td><td>58</td></tr>
-            <tr><td>184</td><td>98</td></tr>
-            <tr><td>165</td><td>68</td></tr>
-            <tr><td>178</td><td>86</td></tr>
-            <tr><td>198</td><td>87</td></tr>
-            <tr><td>210</td><td>112</td></tr>
-            <tr><td>174</td><td>95</td></tr>
-            <tr><td>156</td><td>88</td></tr>
-        </tbody>
-    </table>
-</body>
-</html>
+            <tr><td>177</td><td
+
