--- a/datos.html
+++ b/datos.html
@@ -3,82 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos</title>
+    <title>Datos de altura y peso</title>
 </head>
 <body>
     <table>
-        <thead>
-            <tr>
-                <th>Edad</th>
-                <th>Género</th>
-            </tr>
-        </thead>
         <tbody>
-            <tr><td>13</td><td>Femenino</td></tr>
-            <tr><td>42</td><td>Masculino</td></tr>
-            <tr><td>25</td><td>Masculino</td></tr>
-            <tr><td>29</td><td>nan</td></tr>
-            <tr><td>13</td><td>Masculino</td></tr>
-            <tr><td>-8</td><td></td></tr>
-            <tr><td>11</td><td>Masculino</td></tr>
-            <tr><td>42</td><td>FEMENINO</td></tr>
-            <tr><td>-9</td><td>Femenino</td></tr>
-            <tr><td>13</td><td>Masculino</td></tr>
-            <tr><td>33</td><td>Femenino</td></tr>
-            <tr><td>19</td><td>Masculino</td></tr>
-            <tr><td>27</td><td>Masculino</td></tr>
-            <tr><td>-9</td><td>Masculino</td></tr>
-            <tr><td>49</td><td>M</td></tr>
-            <tr><td>diez</td><td>FEMENINO</td></tr>
-            <tr><td>22</td><td>FEMENINO</td></tr>
-            <tr><td>1</td><td>FEMENINO</td></tr>
-            <tr><td>47</td><td>Masculino</td></tr>
-            <tr><td>11</td><td>FEMENINO</td></tr>
-            <tr><td>33</td><td>Masculino</td></tr>
-            <tr><td>14</td><td>Masculino</td></tr>
-            <tr><td>38</td><td>Masculino</td></tr>
-            <tr><td>16</td><td>Femenino</td></tr>
-            <tr><td>48</td><td>Femenino</td></tr>
-            <tr><td>31</td><td>Femenino</td></tr>
-            <tr><td>17</td><td>FEMENINO</td></tr>
-            <tr><td>49</td><td>Femenino</td></tr>
-            <tr><td>5</td><td>Femenino</td></tr>
-            <tr><td>4</td><td>Masculino</td></tr>
-            <tr><td>36</td><td>Masculino</td></tr>
-            <tr><td>40</td><td>FEMENINO</td></tr>
-            <tr><td>33</td><td>Masculino</td></tr>
-            <tr><td>44</td><td>F</td></tr>
-            <tr><td>41</td><td>FEMENINO</td></tr>
-            <tr><td>46</td><td>Masculino</td></tr>
-            <tr><td>-8</td><td>Masculino</td></tr>
-            <tr><td>26</td><td>FEMENINO</td></tr>
-            <tr><td>40</td><td>Masculino</td></tr>
-            <tr><td>-4</td><td>FEMENINO</td></tr>
-            <tr><td>10</td><td>FEMENINO</td></tr>
-            <tr><td>-2</td><td>Masculino</td></tr>
-            <tr><td>28</td><td>Femenino</td></tr>
-            <tr><td>7</td><td>Masculino</td></tr>
-            <tr><td>-7</td><td>FEMENINO</td></tr>
-            <tr><td>14</td><td>Masculino</td></tr>
-            <tr><td>49</td><td>Femenino</td></tr>
-            <tr><td>3</td><td>Masculino</td></tr>
-            <tr><td>39</td><td>Femenino</td></tr>
-            <tr><td>47</td><td>Femenino</td></tr>
-            <tr><td>170</td><td>65</td></tr>
-            <tr><td>162</td><td>55</td></tr>
-            <tr><td>178</td><td>70</td></tr>
-            <tr><td>155</td><td>50</td></tr>
-            <tr><td>185</td><td>75</td></tr>
-            <tr><td>168</td><td>63</td></tr>
-            <tr><td>172</td><td>68</td></tr>
-            <tr><td>160</td><td>52</td></tr>
-            <tr><td>180</td><td>72</td></tr>
-            <tr><td>175</td><td>67</td></tr>
-            <tr><td>163</td><td>58</td></tr>
-            <tr><td>167</td><td>61</td></tr>
-            <tr><td>182</td><td>73</td></tr>
-            <tr><td>158</td><td>57</td></tr>
-            <tr><td>173</td><td>69</td></tr>
-            <tr><td>165</td><td>60</td></tr>
-            <tr><td>177</td><td
+            <tr><td>1-25</td><td>masculino</td></tr>
+            <tr><td>treinta</td><td>femenino</td></tr>
+            <tr><td>null</td><td>no binario</td></tr>
+            <tr><td>35</td><td>masculino</td></tr>
+            <tr><td>-42</td><td>femenino</td></tr>
+            <tr><td>null</td><td>masculino</td></tr>
+            <tr><td>cincuenta</td><td>no binario</td></tr>
+            <tr><td>28</td><td>femenino</td></tr>
+            <tr><td>-18</td><td>masculino</td></tr>
+            <tr><td>null</td><td>femenino</td></tr>
+            <tr><td>diez</td><td>no binario</td></tr>
+            <tr><td>22</td><td>masculino</td></tr>
+            <tr><td>-36</td><td>femenino</td></tr>
+            <tr><td>null</td><td>no binario</td></tr>
+            <tr><td>veinte</td><td>masculino</td></tr>
+            <tr><td>31</td><td>femenino</td></tr>
+            <tr><td>-50</td><td>masculino</td></tr>
+            <tr><td>null</td><td>femenino</td></tr>
+            <tr><td>veinticinco</td><td>no binario</td></tr>
+            <tr><td>40</td><td>masculino</td></tr>
+            <tr><td>-60</td><td>femenino</td></tr>
+            <tr><td>null</td><td>masculino</td></tr>
+            <tr><td>treinta y cinco</td><td>femenino</td></tr>
+            <tr><td>45</td><td>masculino</td></tr>
+            <tr><td>-70</td><td>femenino</td></tr>
+            <tr><td>null</td><td>no binario</td></tr>
+            <tr><td>cuarenta</td><td>masculino</td></tr>
+            <tr><td>55</td><td>femenino</td></tr>
+            <tr><td>-80</td><td>masculino</td></tr>
+            <tr><td>null</td><td>femenino</td></tr>
+            <tr><td>sesenta</td><td>no binario</td></tr>
+            <tr><td>33</td><td>masculino</td></tr>
+            <tr><td>-90</td><td>femenino</td></tr>
+            <tr><td>null</td><td>no binario</td></tr>
+            <tr><td>ochenta</td><td>masculino</td></tr>
+            <tr><td>27</td><td>femenino</td></tr>
+            <tr><td>-100</td><td>masculino</td></tr>
+            <tr><td>null</td><td>femenino</td></tr>
+            <tr><td>setenta</td><td>no binario</td></tr>
+            <tr><td>39</td><td>masculino</td></tr>
+            <tr><td>-110</td><td>femenino</td></tr>
+            <tr><td>null</td><td>masculino</td></tr>
+            <tr><td>noventa</td><td>femenino</td></tr>
+            <tr><td>49</td><td>masculino</td></tr>
+            <tr><td>-120</td><td>no binario</td></tr>
+            <tr><td>null</td><td>femenino</td></tr>
+            <tr><td>cien</td><td>masculino</td></tr>
+        </tbody>
+    </table>
+</body>
+</html>
 
