--- a/datos.html
+++ b/datos.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos de altura y peso</title>
+    <title>Tabla de Datos</title>
 </head>
 <body>
-    <table>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Edad</th>
+                <th>Género</th>
+            </tr>
+        </thead>
+   
         <tbody>
             <tr><td>1-25</td><td>masculino</td></tr>
             <tr><td>treinta</td><td>femenino</td></tr>
