--- a/datos.html
+++ b/datos.html
@@ -9,8 +9,8 @@
     <table border="1">
         <thead>
             <tr>
-                <th>Edad</th>
-                <th>Género</th>
+                <th>edad</th>
+                <th>genero</th>
             </tr>
         </thead>
    
