--- a/Calificaciones.html
+++ b/Calificaciones.html
@@ -1,36 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calificaciones de Usuario</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        table {
-            width: 50%;
-            margin: 0 auto;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
 </head>
 <body>
     <h1>Calificaciones de Usuario</h1>
-    <table>
+    <table class="calificaciones">
         <tr>
             <th>Asignatura</th>
             <th>Calificación</th>
@@ -41,15 +18,15 @@
         </tr>
         <tr>
             <td>Ciencias</td>
-            <td>9.0</td>
+            <td>9.2</td>
         </tr>
         <tr>
             <td>Historia</td>
-            <td>7.5</td>
+            <td>7.8</td>
         </tr>
         <tr>
-            <td>Lenguaje</td>
-            <td>8.0</td>
+            <td>Literatura</td>
+            <td>8.9</td>
         </tr>
     </table>
 </body>
